* Removed generic use of influence(model,...) from usage area in influence-methods.Rd - CRAN check * Updated format of NEWS to comply with new CRAN checks * Updated references throughout to JCGS citation instead of ArXiV

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,14 @@
-Version 1.0: First CRAN release
+Version 1.0.1
+=============
+* Changed itemize to describe in InfluenceMap.Rd - CRAN check
+* Removed generic use of influence(model,...) from usage area in influence-methods.Rd - CRAN check
+* Updated format of NEWS to comply with new CRAN checks
+* Updated references throughout to JCGS citation instead of ArXiV
 
-Version 0.1: Original
+Version 1.0
+===========
+* First CRAN release
 
-Rebecca Killick
-Lancaster University
-www.lancs.ac.uk/~killick
+Version 0.1
+===========
+* Original
