--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,7 @@
-Version 1.0.1
-=============
-* Changed itemize to describe in InfluenceMap.Rd - CRAN check
-* Removed generic use of influence(model,...) from usage area in influence-methods.Rd - CRAN check
-* Updated format of NEWS to comply with new CRAN checks
-* Updated references throughout to JCGS citation instead of ArXiV
+Version 1.0: First CRAN release
 
-Version 1.0
-===========
-* First CRAN release
+Version 0.1: Original
 
-Version 0.1
-===========
-* Original
+Rebecca Killick
+Lancaster University
+www.lancs.ac.uk/~killick
